# agentweave

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CONVERSATION_LIFECYCLE.md  CONVERSATION_LIFECYCLE.zh-CN.md  Cargo.toml  DATA_PROTECTION.md  DATA_PROTECTION.zh-CN.md  DESKTOP_PACKAGING.md  DESKTOP_PACKAGING.zh-CN.md  DESKTOP_SIDECAR_SUPERVISOR.md  DESKTOP_SIDECAR_SUPERVISOR.zh-CN.md  DEVELOPING_AGENT_APPS.md  DEVELOPING_AGENT_APPS.zh-CN.md  LICENSE  LICENSE-MIT  LOCAL_SIDECAR_TRANSPORT.md  LOCAL_SIDECAR_TRANSPORT.zh-CN.md  MAIL_CONNECTOR_SETUP.md  MAIL_CONNECTOR_SETUP.zh-CN.md  NOTICE  README.md  README.zh-CN.md  STREAMING_TURN_LIFECYCLE.md  STREAMING_TURN_LIFECYCLE.zh-CN.md  pixi.toml
crates/agent-devkit/: Cargo.toml
crates/agent-devkit/src/: authorization.rs  deployment.rs  deployment_bundle.rs  descriptor.rs  error.rs  lib.rs  sensitive.rs
crates/agent-devkit/src/cloudflare/: accounts.rs  client.rs  commerce_d1.rs  configuration.rs  conformance_tests.rs  d1.rs  managed_worker.rs  mod.rs  oauth.rs  provider.rs  provider_support.rs  schema.rs  transport.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: app_access_manifest.rs  app_definition.rs  app_manifest.rs  app_manifest_tests.rs  approval.rs  attachment_tools.rs  attachments.rs  attachments_tests.rs  automation.rs  automation_tests.rs  automation_tools.rs  automation_tools_tests.rs  calendar.rs  calendar_action_envelope.rs  calendar_action_envelope_tests.rs  calendar_actions.rs  calendar_actions_tests.rs  calendar_connector_transport.rs  calendar_connector_transport_tests.rs  calendar_tests.rs  connector.rs  connector_ledger.rs  connector_tests.rs  connector_tools.rs  contacts.rs  contacts_action_envelope.rs  contacts_action_envelope_tests.rs  contacts_actions.rs  contacts_actions_tests.rs  contacts_connector_transport.rs  contacts_connector_transport_tests.rs  contacts_tests.rs  context.rs  conversation_migration.rs  credential.rs  credential_cleanup_sqlite.rs  credential_cleanup_sqlite_tests.rs  credential_file.rs  credential_persistence.rs  credential_provider_leases.rs  (+215 more)
crates/agent-runtime/src/tools/: app_policy_command_tests.rs  builtin.rs  command.rs  definition_support.rs  discovery.rs  execution_observer_tests.rs  foundation_actions.rs  foundation_actions_tests.rs  host_dispatch.rs  management_registry_tests.rs  mod.rs  patch.rs  patch_tests.rs  path.rs  persistence_policy_tests.rs  process.rs  registry_support.rs  registry_tests.rs  (+3 more)
crates/agent-runtime/tests/: application_skill_upgrade.rs  legacy_skill_migration.rs  mail_conformance.rs  mail_live_smoke.rs  managed_skill_activation.rs  secretary_foundations.rs  skill_recovery.rs  skill_store_security.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: api.rs  api_attachment_tests.rs  api_automation_tests.rs  api_conversation_tests.rs  api_data_protection_tests.rs  api_foundation_tests.rs  api_foundations.rs  api_host_bootstrap_tests.rs  api_task_tests.rs  api_tests.rs  api_types.rs  attachment_api.rs  automation_api.rs  commerce_api.rs  conversation_api.rs  conversation_api_tests.rs  data_protection.rs  data_protection_api.rs  dev_api.rs  dev_api_mutation_tests.rs  dev_api_tests.rs  dev_skill_authoring.rs  dev_skill_authoring_dependency_tests.rs  dev_skill_authoring_error.rs  dev_skills.rs  developer_commerce.rs  developer_commerce_api.rs  developer_control_plane.rs  developer_control_plane_api.rs  developer_control_plane_bundle.rs  developer_control_plane_bundle_destroy.rs  developer_control_plane_bundle_lifecycle.rs  developer_control_plane_bundle_lifecycle_api.rs  developer_control_plane_bundle_tests.rs  developer_control_plane_commerce_bootstrap.rs  developer_control_plane_deployment.rs  developer_control_plane_oauth.rs  developer_control_plane_tests.rs  developer_firebase.rs  developer_firebase_models.rs  (+44 more)
crates/agent-server/tests/: bundle_skills.rs  check_skills.rs  owner_skills_api.rs  tenant_skill_isolation.rs  windows_metadata_contract.rs
crates/commerce-creem/: Cargo.toml
crates/commerce-creem/src/: client.rs  descriptor.rs  lib.rs  provider.rs  webhook.rs
crates/commerce-runtime/: Cargo.toml
crates/commerce-runtime/src/: contract.rs  lib.rs  state.rs
crates/entitlement-providers/: Cargo.toml
crates/entitlement-providers/src/: clock.rs  descriptor.rs  devkit_descriptor.rs  error.rs  gateway_projection.rs  http_provider.rs  lib.rs  memory_ledger.rs  static_provider.rs  stripe_projection.rs
crates/entitlement-providers/tests/: descriptor_schema.rs  http_conformance.rs  static_conformance.rs  stripe_projection_conformance.rs
crates/identity-firebase/: Cargo.toml
crates/identity-firebase/src/: client.rs  config.rs  descriptor.rs  error.rs  lib.rs  secret.rs  store.rs  tests.rs
crates/identity-oidc/: Cargo.toml
crates/identity-oidc/src/: config.rs  descriptor.rs  error.rs  gateway_projection.rs  jwt.rs  lib.rs  persistent_store.rs  provider.rs  secret.rs  store.rs  tests.rs  transport.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: bridge.rs  identity_bridge.rs  identity_runtime.rs  jni_bridge.rs  jni_identity_bridge.rs  lib.rs  mobile_app.rs  runtime.rs  runtime_foundations.rs  runtime_identity.rs  runtime_identity_session.rs  runtime_inventory.rs  runtime_policy.rs  runtime_support.rs  types.rs
crates/mobile-ffi/tests/: mobile_application_update.rs  mobile_bridge.rs  mobile_runtime.rs
crates/model-gateway/: Cargo.toml
crates/model-gateway/src/: adapter.rs  bridge.rs  chat.rs  credentials.rs  gateway_compatibility_tests.rs  lib.rs  provider.rs  responses.rs  streaming.rs  streaming_transport.rs  tool_identity.rs  tool_identity_tests.rs
crates/provider-adapters/: Cargo.toml  README.md
crates/provider-adapters/src/: calendar_support.rs  credential_source.rs  google_calendar.rs  google_calendar_tests.rs  google_contacts.rs  google_contacts_tests.rs  http.rs  lib.rs  microsoft_calendar.rs  microsoft_calendar_tests.rs  microsoft_contacts.rs  microsoft_contacts_tests.rs  oauth_provider.rs
crates/storage-sqlcipher/: Cargo.toml
crates/storage-sqlcipher/src/: lib.rs
(+581 files in other folders)
