[workspace]
resolver = "2"
members = [
  "crates/model-gateway",
  "crates/agent-runtime",
  "crates/agent-server",
  "crates/mobile-ffi",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
icu_casemap = { version = "2.1.1", features = ["compiled_data"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
