[workspace]
resolver = "2"
members = [
  "crates/model-gateway",
  "crates/agent-runtime",
  "crates/agent-devkit",
  "crates/commerce-runtime",
  "crates/commerce-creem",
  "crates/entitlement-providers",
  "crates/identity-firebase",
  "crates/identity-oidc",
  "crates/storage-sqlcipher",
  "crates/provider-adapters",
  "crates/agent-server",
  "crates/mobile-ffi",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
aes-gcm = "0.10"
async-trait = "0.1"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
futures = "0.3"
fs2 = "0.4"
hex = "0.4"
hmac = "0.12"
icu_casemap = { version = "2.1.1", features = ["compiled_data"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-native-tls"] }
mail-parser = { version = "0.11", features = ["full_encoding"] }
native-tls = "0.2"
percent-encoding = "2"
rustix = { version = "1", features = ["fs", "process"] }
same-file = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "process", "time"] }
tokio-native-tls = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
windows-sys = { version = "0.61", features = [
  "Wdk_Foundation",
  "Wdk_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }
