[package]
name = "agent-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
model-gateway = { path = "../model-gateway" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
