[package]
name = "agent-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
fs2.workspace = true
hex.workspace = true
icu_casemap.workspace = true
model-gateway = { path = "../model-gateway" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
same-file.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tempfile = "3"
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

rustix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
