[package]
name = "agent-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-runtime = { path = "../agent-runtime" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
fs2.workspace = true
model-gateway = { path = "../model-gateway" }
rustix.workspace = true
same-file.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
futures.workspace = true
sqlx.workspace = true
tempfile = "3"
