[package]
name = "agent-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-devkit = { path = "../agent-devkit" }
agent-runtime = { path = "../agent-runtime" }
agent-provider-adapters = { path = "../provider-adapters" }
entitlement-providers = { path = "../entitlement-providers" }
identity-firebase = { path = "../identity-firebase" }
identity-oidc = { path = "../identity-oidc" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
fs2.workspace = true
futures.workspace = true
hex.workspace = true
model-gateway = { path = "../model-gateway" }
reqwest.workspace = true
rustix.workspace = true
same-file.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile = "3"
