[package]
name = "commerce-creem"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Creem commerce provider for AgentWeave"

[dependencies]
agent-devkit = { path = "../agent-devkit" }
async-trait.workspace = true
chrono.workspace = true
commerce-runtime = { path = "../commerce-runtime" }
hex.workspace = true
hmac.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio.workspace = true
