[package]
name = "commerce-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Provider-neutral commerce contracts for AgentWeave"

[dependencies]
agent-devkit = { path = "../agent-devkit" }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true
