[package]
name = "entitlement-providers"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Replaceable entitlement provider implementations for AgentWeave"

[dependencies]
agent-devkit = { path = "../agent-devkit" }
agent-runtime = { path = "../agent-runtime" }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
url = { version = "2", features = ["serde"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
