[package]
name = "identity-firebase"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-devkit = { path = "../agent-devkit" }
agent-runtime = { path = "../agent-runtime" }
async-trait.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
