[package]
name = "identity-oidc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
agent-devkit = { path = "../agent-devkit" }
agent-runtime = { path = "../agent-runtime" }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.3"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
subtle = "2.6"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
