[package]
name = "mobile-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agent-runtime = { path = "../agent-runtime" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
model-gateway = { path = "../model-gateway" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
sqlx.workspace = true
tempfile = "3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
