[package]
name = "agent-provider-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-runtime = { path = "../agent-runtime" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
hex.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
axum.workspace = true
