[package]
name = "agent-storage-sqlcipher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-runtime = { path = "../agent-runtime" }
anyhow.workspace = true
async-trait.workspace = true
fs2.workspace = true
hex.workspace = true
libsqlite3-sys = { version = "=0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
sqlx.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
